tests/snapshots/compile__wgsl_effect_sharpen_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_control_sharpen1_amount: f32,
    u_control_sharpen1_radius: f32,
    u_control_sharpen1_threshold: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn sharpen1_color(uv: vec2f) -> vec4f {
    let amount = u.u_control_sharpen1_amount;
    let radius = max(u.u_control_sharpen1_radius, 1e-3);
    let texel = vec2f(1.0) / 720.0;
    var center = vec4f(0.0);
    var blurred = vec4f(0.0);
    var total = 0.0;
    for (var y = -3; y <= 3; y++) {
        for (var x = -3; x <= 3; x++) {
            let offset = vec2f(f32(x), f32(y)) * texel;
            let sampled = defaultUvMap(uv + offset);
            if (x == 0 && y == 0) { center = sampled; }
            let d2 = f32(x * x + y * y);
            let weight = select(exp(-d2 / (2.0 * radius * radius)), 0.0, d2 > 9.0);
            blurred += sampled * weight;
            total += weight;
        }
    }
    blurred /= max(total, 1e-6);
    let detail = center.rgb - blurred.rgb;
    let edge = length(detail);
    let threshold = u.u_control_sharpen1_threshold;
    let keep = smoothstep(threshold, threshold + 0.01, edge);
    return vec4f(clamp(center.rgb + detail * (amount) * keep, vec3f(0.0), vec3f(1.0)), center.a);
}

fn sharpen1_value(uv: vec2f) -> f32 {
    let amount = u.u_control_sharpen1_amount;
    let radius = max(u.u_control_sharpen1_radius, 1e-3);
    let texel = vec2f(1.0) / 720.0;
    var center = vec4f(0.0);
    var blurred = vec4f(0.0);
    var total = 0.0;
    for (var y = -3; y <= 3; y++) {
        for (var x = -3; x <= 3; x++) {
            let offset = vec2f(f32(x), f32(y)) * texel;
            let sampled = defaultUvMap(uv + offset);
            if (x == 0 && y == 0) { center = sampled; }
            let d2 = f32(x * x + y * y);
            let weight = select(exp(-d2 / (2.0 * radius * radius)), 0.0, d2 > 9.0);
            blurred += sampled * weight;
            total += weight;
        }
    }
    blurred /= max(total, 1e-6);
    let detail = center.rgb - blurred.rgb;
    let edge = length(detail);
    return clamp(edge, 0.0, 1.0);
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(sharpen1_value(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a));
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = sharpen1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
