tests/snapshots/compile__wgsl_effect_sincfilter_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn sincfilter1_output(uv: vec2f) -> vec4f {
    let cutoff = vignette4_mask(uv);
    let sharpness = vignette5_mask(uv);
    let kernelStep = vec2f(1.0) / 720.0;
    var sum = vec4f(0.0);
    var total = 0.0;
    var offset = vec2f(0.0);
    for (var y = -3; y <= 3; y++) {
        for (var x = -3; x <= 3; x++) {
            offset = vec2f(f32(x), f32(y)) * kernelStep;
            let dist = length(vec2f(f32(x), f32(y)));
            let t = PI * dist * cutoff * sharpness;
            let sinc = select(sin(t) / t, 1.0, dist == 0.0);
            let window = 0.54 + 0.46 * cos(PI * dist / 3.0);
            let weight = sinc * window * step(dist, 3.0);
            sum += (checkerboard3_output(uv + offset)) * weight;
            total += weight;
        }
    }
    return select(sum, sum / total, total > 0.0);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return sincfilter1_output(uv);
}
