tests/snapshots/compile__wgsl_effect_sincfilter_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_sincfilter1_cutoff: f32,
    u_control_sincfilter1_sharpness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn sincfilter1_output(uv: vec2f) -> vec4f {
    let cutoff = u.u_control_sincfilter1_cutoff;
    let sharpness = u.u_control_sincfilter1_sharpness;
    let kernelStep = vec2f(1.0) / 720.0;
    var sum = vec4f(0.0);
    var total = 0.0;
    var offset = vec2f(0.0);
    for (var y = -3; y <= 3; y++) {
        for (var x = -3; x <= 3; x++) {
            offset = vec2f(f32(x), f32(y)) * kernelStep;
            let dist = length(vec2f(f32(x), f32(y)));
            let t = PI * dist * cutoff * sharpness;
            let sinc = select(sin(t) / t, 1.0, dist == 0.0);
            let window = 0.54 + 0.46 * cos(PI * dist / 3.0);
            let weight = sinc * window * step(dist, 3.0);
            sum += (defaultUvMap(uv + offset)) * weight;
            total += weight;
        }
    }
    return select(sum, sum / total, total > 0.0);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return sincfilter1_output(uv);
}
