tests/snapshots/compile__wgsl_effect_stargate_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_control_stargate1_angle: f32,
    u_control_stargate1_offset: f32,
    u_control_stargate1_perspective: f32,
    u_control_stargate1_speed: f32,
    u_control_stargate1_width: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn stargate1_color(uv: vec2f) -> vec4f {
    let zoom = max(1.0 + (u.u_control_stargate1_perspective) * 2.0, 1e-3);
    let zoomedUV = uv / zoom;
    let angle = (u.u_control_stargate1_angle) * 2.0 * PI;
    let s = sin(angle);
    let c = cos(angle);
    let slit = (mat2x2f(c, -s, s, c) * zoomedUV).y;
    let center = u.u_control_stargate1_offset;
    let halfWidth = u.u_control_stargate1_width;
    let mask = clamp(
        smoothstep(center - halfWidth, center - halfWidth + 0.01, slit)
            - smoothstep(center + halfWidth - 0.01, center + halfWidth, slit),
        0.0,
        1.0);
    let drag = vec2f(s, -c) * sign(slit - center) * ((u.u_control_stargate1_speed) / (720.0 * 0.5));
    let lastFrameUV = zoomedUV + drag;
    return mix(defaultUvMap(lastFrameUV), defaultUvMap(zoomedUV), mask);
}

fn stargate1_mask(uv: vec2f) -> f32 {
    let zoom = max(1.0 + (u.u_control_stargate1_perspective) * 2.0, 1e-3);
    let zoomedUV = uv / zoom;
    let angle = (u.u_control_stargate1_angle) * 2.0 * PI;
    let s = sin(angle);
    let c = cos(angle);
    let slit = (mat2x2f(c, -s, s, c) * zoomedUV).y;
    let center = u.u_control_stargate1_offset;
    let halfWidth = u.u_control_stargate1_width;
    let mask = clamp(
        smoothstep(center - halfWidth, center - halfWidth + 0.01, slit)
            - smoothstep(center + halfWidth - 0.01, center + halfWidth, slit),
        0.0,
        1.0);
    let drag = vec2f(s, -c) * sign(slit - center) * ((u.u_control_stargate1_speed) / (720.0 * 0.5));
    let lastFrameUV = zoomedUV + drag;
    return mask;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(stargate1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = stargate1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
