tests/snapshots/compile__wgsl_effect_supersampling_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn supersampling1_output(uv: vec2f) -> vec4f {
    let offset = vec2f(0.0);
    return defaultUvMap(uv + offset);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return supersampling1_output(uv);
}
