tests/snapshots/compile__wgsl_generate_brickgame_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_mix6_amount: f32,
    u_control_mix7_amount: f32,
    u_control_rgba5_a: f32,
    u_control_rgba5_b: f32,
    u_control_rgba5_g: f32,
    u_opt_mix6_curve: i32,
    u_opt_mix6_method: i32,
    u_opt_mix7_curve: i32,
    u_opt_mix7_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(2) var sampler_mirror_linear: sampler;
@group(0) @binding(3) var sampler_mirror_nearest: sampler;
@group(0) @binding(4) var sampler_repeat_linear: sampler;
@group(0) @binding(5) var sampler_repeat_nearest: sampler;
@group(0) @binding(6) var u_texture_brickgame1_field: texture_2d<f32>;

fn brickgame1_field(uv: vec2f) -> vec4f {
    let texSize = vec2f(textureDimensions(u_texture_brickgame1_field));
    let aspect = texSize.x / max(texSize.y, 1.0);
    let t = vec2f((uv.x / aspect + 1.0) * 0.5, 1.0 - (uv.y + 1.0) * 0.5);
    return textureSampleLevel(u_texture_brickgame1_field, sampler_mirror_linear, t, 0.0);
}

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn brickgame1_color(uv: vec2f) -> vec4f {
    let texSize = vec2f(textureDimensions(u_texture_brickgame1_field));
    let aspect = texSize.x / max(texSize.y, 1.0);
    let t = vec2f((uv.x / aspect + 1.0) * 0.5, 1.0 - (uv.y + 1.0) * 0.5);
    let background = checkerboard4_output(uv);
    if (t.x < 0.004 || t.x > 0.996 || t.y < 0.004 || t.y > 0.996) {
        return background;
    }
    return mix(background, checkerboard3_output(uv), textureSampleLevel(u_texture_brickgame1_field, sampler_mirror_linear, t, 0.0).r);
}

fn mix6_output(uv: vec2f) -> vec4f {
    let a = brickgame1_field(uv);
    let b = brickgame1_color(uv);
    let amt = clamp(u.u_control_mix6_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix6_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix6_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

fn brickgame1_mask(uv: vec2f) -> f32 {
    let texSize = vec2f(textureDimensions(u_texture_brickgame1_field));
    let aspect = texSize.x / max(texSize.y, 1.0);
    let t = vec2f((uv.x / aspect + 1.0) * 0.5, 1.0 - (uv.y + 1.0) * 0.5);
    if (t.x < 0.004 || t.x > 0.996 || t.y < 0.004 || t.y > 0.996) {
        return 0.0;
    }
    return textureSampleLevel(u_texture_brickgame1_field, sampler_mirror_linear, t, 0.0).r;
}

fn rgba5_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(brickgame1_mask(uv), u.u_control_rgba5_g, u.u_control_rgba5_b, u.u_control_rgba5_a));
}

fn mix7_output(uv: vec2f) -> vec4f {
    let a = mix6_output(uv);
    let b = rgba5_output(uv);
    let amt = clamp(u.u_control_mix7_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix7_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix7_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix7_output(uv);
}
